Fix chart range switch on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -33,11 +33,12 @@
 [name="range-switch"] button {
     color: #4e5862;
     border: 0;
-    border-radius: 24px;
-    width: 48px;
-    height: 48px;
+    border-radius: 21px;
+    width: 42px;
+    height: 42px;
     transition: .2s;
     background: transparent;
+    text-align: center;
 }
 
 [name="range-switch"] button:hover {
